apps/notification-service/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nh-notification-service
  labels:
    name: nh-notification-service
