apps/notification-service/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service-svc
  namespace: nh-notification-service
  labels:
    app: notification-service
spec:
  type: ClusterIP
  ports:
    - port: 5006
      targetPort: 5006
      name: http
  selector:
    app: notification-service
