apps/notification-service/k8s/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: notification-service-netpol
  namespace: nexus-service
spec:
  podSelector:
    matchLabels:
      app: notification-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 5006
        - protocol: TCP
          port: 500056
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: nexus-infra
      ports:
        - protocol: TCP
          port: 4222
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 4317
        - protocol: TCP
          port: 4318
